The main part of the code is ready to be revewed, i still got quite a few things to do but just want to make sure everything works as it should

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -2,7 +2,7 @@
 /* Global Styles */
 body {
     margin: 0; 
-    background-color: black; 
+    background-color: #009B77; 
     color: white; /* Set text color */
     font-family: Arial, sans-serif; 
     overflow-x: hidden; 
