--- a/css/header.css
+++ b/css/header.css
@@ -5,9 +5,15 @@ header {
 }
 
 header h1 {
-  font-size: 2em; /* Title font size */
-  margin: 0; /* Remove default margin */
-  color: black; /* Set header text color */
+  font-size: 2em;
+  margin: 0;
+  color: black;
+}
+
+header p {
+  font-size: 1em;
+  margin: 0;
+  color: black;
 }
 
 /* For Phones (Up to 600px) */
