--- a/css/main.css
+++ b/css/main.css
@@ -309,5 +309,23 @@ body {
     padding: 9px;
   }
 }
+/* Delete Button Styles */
+.delete-button {
+  margin-left: 10px;
+  padding: 10px 15px;
+  font-size: 14px;
+  background-color: inherit;
+  color: white;
+  border: 2px solid red;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.delete-button:hover {
+  background-color: red;
+  color: white;
+  border-color: white;
+}
 
 /*# sourceMappingURL=main.css.map */
