--- a/css/collection.css
+++ b/css/collection.css
@@ -96,6 +96,7 @@
   font-size: 16px;
   background-color: inherit;
   color: white;
+  background-color: plum;
   border: 2px solid aqua;
   cursor: pointer;
   border-radius: 8px;
