--- a/css/delete-collection.css
+++ b/css/delete-collection.css
@@ -37,7 +37,7 @@
 }
 /* Delete Button Styles */
 .delete-button {
-  margin-left: 10px;
+  margin: 10px;
   padding: 10px 15px;
   font-size: 14px;
   background-color: inherit;
