--- a/css/generate-image.css
+++ b/css/generate-image.css
@@ -20,7 +20,7 @@
   border: 2px solid aqua;
   border-radius: 10px; /* Rounded corners for the container */
   padding: 10px;
-  background-color: red;
+  background-color: grey;
   text-align: center;
 }
 
