--- a/scss/delete-collection.scss
+++ b/scss/delete-collection.scss
@@ -18,6 +18,7 @@
     background-color: red; 
     color: white;
     border-color: white; 
+    
 }
 
 
@@ -44,7 +45,7 @@
 
 /* Delete Button Styles */
 .delete-button {
-    margin-left: 10px;
+    margin: 10px;
     padding: 10px 15px;
     font-size: 14px;
     background-color: inherit;
