Adding better color scemes and overall look of the page

--- a/css/generate-image.css
+++ b/css/generate-image.css
@@ -3,8 +3,8 @@
   width: 25%;
   margin: 20px auto;
   border-style: dotted;
-  color: orange;
-  background-color: blue;
+  color: white;
+  background-color: #E2C044;
   border-color: aqua;
   cursor: pointer;
   padding: 10px;
