--- a/css/layout.css
+++ b/css/layout.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   background-color: #009B77;
-  color: white; /* Set text color */
+  color: white;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
 }
