--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ header p {
 body {
   margin: 0;
   background-color: #009B77;
-  color: white; /* Set text color */
+  color: white;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
 }
@@ -57,7 +57,7 @@ body {
   max-width: 620px;
   margin: 10px auto;
   border: 2px solid aqua;
-  border-radius: 10px; /* Rounded corners for the container */
+  border-radius: 10px;
   padding: 10px;
   background-color: grey;
   text-align: center;
@@ -67,7 +67,7 @@ body {
   max-width: 100%;
   height: auto;
   border: 2px solid aqua;
-  border-radius: 8px; /* Rounded corners for the image */
+  border-radius: 8px;
 }
 
 /* For Phones (Up to 600px) */
@@ -101,7 +101,7 @@ body {
   }
   .image-container img {
     max-width: 100%;
-    border-radius: 8px; /* Rounded corners for medium screens */
+    border-radius: 8px;
   }
 }
 /* Collection Button Styles */
