--- a/scss/generate-image.scss
+++ b/scss/generate-image.scss
@@ -12,6 +12,14 @@
     display: block; 
 }
 
+/* Generate image button */
+.generate-image-button:hover {
+   
+    background-color: goldenrod;
+   
+}
+
+
 /* Image container */
 .image-container {
     width: 100%; 
