--- a/css/collection.css
+++ b/css/collection.css
@@ -75,6 +75,10 @@
   text-align: center;
 }
 
+.email-section button:hover {
+  background-color: purple;
+}
+
 .dropdown-section {
   margin: 20px auto;
   text-align: center;
