--- a/css/generate-image.css
+++ b/css/generate-image.css
@@ -12,6 +12,11 @@
   display: block;
 }
 
+/* Generate image button */
+.generate-image-button:hover {
+  background-color: goldenrod;
+}
+
 /* Image container */
 .image-container {
   width: 100%;
