--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,11 @@ body {
   display: block;
 }
 
+/* Generate image button */
+.generate-image-button:hover {
+  background-color: goldenrod;
+}
+
 /* Image container */
 .image-container {
   width: 100%;
@@ -179,6 +184,10 @@ body {
   border-radius: 8px;
   display: inline-block;
   text-align: center;
+}
+
+.email-section button:hover {
+  background-color: purple;
 }
 
 .dropdown-section {
